[tool.poetry]
name = "prefect-parallel-process"
version = "0.1.0"
description = ""
authors = ["orangekame3 <miya.org.0309@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
prefect = "^2.18.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
